miniextendr-macros/tests/ui_vctrs/derive_vctrs_unknown_container_attr.rs
//! Test: unknown vctrs container attribute.

use miniextendr_macros::Vctrs;

#[derive(Vctrs)]
#[vctrs(class = "my_class", bogus = true)]
struct Bad {
    x: f64,
}

fn main() {}
